fix bug menu.active 101vh + add map in str about

--- a/app/design.html
+++ b/app/design.html
@@ -568,6 +568,29 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
+                    ЧТО ТАКОЕ ТЕХНИЧЕСКОЕ ЗАДАНИЕ И ДЛЯ ЧЕГО ОНО НУЖНО?
+                  </p>
+                  <div class="questions__item-wrapper">
+                    <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
+                    <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
+                  </div>
+                </div>
+                <p class="questions__item-text text">
+                  Техническое задание (сокращённо ТЗ) содержит в себе необходимые требования к бассейну.
+                  Фактически при
+                  составлении технического задания идет общение между заказчиком и исполнителем, так обе
+                  стороны лучше
+                  понимают как потребности и функциональные пожелания, так и технические возможности при
+                  реализации
+                  будущего проекта.
+                </p>
+              </div>
+            </div>
+
+            <div class="questions__item global__item-bg">
+              <div class="questions__item-inners">
+                <div class="questions__item-title">
+                  <p class="questions__item-title--text">
                     ХОТИМ ПОСТРОИТЬ КОММЕРЧЕСКИЙ БАССЕЙН. С ЧЕГО НАЧАТЬ?
                   </p>
                   <div class="questions__item-wrapper">
@@ -586,7 +609,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                   ВОЗМОЖНО ЛИ ЭКСПЛУАТИРОВАТЬ БАССЕЙН БЕЗ ХЛОРА?
+                    ВОЗМОЖНО ЛИ ЭКСПЛУАТИРОВАТЬ БАССЕЙН БЕЗ ХЛОРА?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -602,11 +625,13 @@
               </div>
             </div>
 
+
+
             <div class="questions__item global__item-bg">
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    ЧТО ТАКОЕ ТЕХНИЧЕСКОЕ ЗАДАНИЕ И ДЛЯ ЧЕГО ОНО НУЖНО?
+                    НУЖНА ЛИ ПОДПИТКА СВЕЖЕЙ ВОДЫ В БАССЕЙНЕ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
@@ -614,32 +639,12 @@
                   </div>
                 </div>
                 <p class="questions__item-text text">
-                  Техническое задание (сокращённо ТЗ) содержит в себе необходимые требования к бассейну. Фактически при
-                  составлении технического задания идет общение между заказчиком и исполнителем, так обе стороны лучше
-                  понимают как потребности и функциональные пожелания, так и технические возможности при реализации
-                  будущего проекта.
+                  Обязательно во всех общественных, а тем более в <a class="questions__item-link"
+                    href="children.html">детских бассейнах</a> для обновления воды в чаше должна
+                  быть предусмотрена регулярная подпитка свежей водой.
                 </p>
               </div>
             </div>
-
-              <div class="questions__item global__item-bg">
-                <div class="questions__item-inners">
-                  <div class="questions__item-title">
-                    <p class="questions__item-title--text">
-                      НУЖНА ЛИ ПОДПИТКА СВЕЖЕЙ ВОДЫ В БАССЕЙНЕ?
-                    </p>
-                    <div class="questions__item-wrapper">
-                      <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
-                      <img src="images/icons/arrow__down-hover.png" alt="" class="questions__item-title--img2">
-                    </div>
-                  </div>
-                  <p class="questions__item-text text">
-                    Обязательно во всех общественных, а тем более в <a class="questions__item-link"
-                      href="children.html">детских бассейнах</a> для обновления воды в чаше должна
-                    быть предусмотрена регулярная подпитка свежей водой.
-                  </p>
-                </div>
-              </div>
           </div>
 
         </div>
