--- a/app/mosaic.html
+++ b/app/mosaic.html
@@ -562,7 +562,7 @@
               <div class="questions__item-inners">
                 <div class="questions__item-title">
                   <p class="questions__item-title--text">
-                    ВОЗМОЖЕН ЛИ ИНДИВИДУАЛЬНЫЙ РИСУНОК?
+                    ВОЗМОЖЕН ЛИ ИНДИВИДУАЛЬНЫЙ РИСУНОК ОТДЕЛКИ?
                   </p>
                   <div class="questions__item-wrapper">
                     <img src="images/icons/arrow__down.png" alt="" class="questions__item-title--img1">
