new banner header-bg, fix questions, + ip in footer and index.html

--- a/app/concrete.html
+++ b/app/concrete.html
@@ -389,11 +389,23 @@
                 5. ОТДЕЛКА
               </h3>
               <div class="stages__item__text text">
-                Самый надежный и долговечный материал для отделки - керамическая плитка или мозаика, которые
+                Наиболее распространенные способы отделки бетонной чаши это мозаика или 
+                <a class="questions__item-link" href="mosaic.html">плитка</a>
+                 и 
+                <a class="questions__item-link" href="pvc.html">пленка ПВХ</a>
+                 (лайнер).
+                <br>
+                <br>
+                Самый надежный и долговечный материал - керамическая плитка или мозаика, которые
                 предназначены для использования в бассейнах.
                 <br>
-                Эти материалы должны обладать минимальным или нулевым коэффициентом водопоглощения, а также быть
-                устойчивыми к длительному воздействию дезинфектанта, содержащегося в воде.
+                <br>
+               Эти материалы должны обладать минимальным или нулевым коэффициентом водопоглощения, а также быть
+               устойчивыми к длительному воздействию дезинфектанта, содержащегося в воде.
+               <br>
+               Современная <a class="questions__item-link" href="pvc.html">пленка ПВХ</a> предназначенная для отделки
+               чаш бассейнов имеет срок службы от 10-15 лет. Отделка
+               чаши таким материалом позволяет существенно сократить сроки строительства и финансовые затраты, а в некоторых случаях является практически безальтернативным вариантом.
               </div>
             </div>
           </div>
