--- a/app/design.html
+++ b/app/design.html
@@ -619,8 +619,9 @@
                 <p class="questions__item-text text">
                   Действующие нормы не предусматривают иного решения для дезинфекции общественных бассейнов. Для
                   уменьшения содержания хлора в воде допускается его применение совместно с установками
-                  ультрафиолетового обеззараживания. Это позволят снизить содержание свободного хлора до 0,1-0,3 мг/л,
-                  при этом поддерживать достаточный потенциал окислителя в воде.
+                  ультрафиолетового обеззараживания. Это решение позволят снизить содержание свободного хлора до 0,1-0,3
+                  мг/л, сохраняя при этом достаточный потенциал окислителя в воде, который необходим для безопасного
+                  функционирования бассейна.
                 </p>
               </div>
             </div>
