--- a/app/index.html
+++ b/app/index.html
@@ -1169,8 +1169,8 @@
             <p class="footer__requisites">
               Реквизиты
               <br>
-              ООО “Линия воды”
               <br>
+              ООО “Линия воды”
               <br>
               ИНН: 3810326662
               <br>
@@ -1179,6 +1179,17 @@
               БИК: 044525974
               <br>
               р/c: 40702810210000717176
+              <br>
+              <br>
+              ИП Минеев
+              <br>
+              ИНН: 380895552291
+              <br>
+              ОГРН: 306380828200028
+              <br>
+              БИК: 044525974
+              <br>
+              р/c: 40802810300001668539
             </p>
             <p class="footer__city">
               192241, г. Санкт-Петербург,
