fix requisites footer fuul str

--- a/app/article.html
+++ b/app/article.html
@@ -385,26 +385,26 @@
             </div>
           </div>
 
-       
-
-        <div class="article__box">
-          <a class="article__link text" href="repair.html">
-            Подробнее о нашей услуге по Ремонту и реконструкции бассейнов...
-          </a>
 
 
-          <div class="article__inner-btn">
-            <a class="global__btn-contact global-btn main-btn" href="news.html">
-              все новости
+          <div class="article__box">
+            <a class="article__link text" href="repair.html">
+              Подробнее о нашей услуге по Ремонту и реконструкции бассейнов...
             </a>
-            <div data-modal class="global__btn-contact global-btn main-btn article__btn">
-              Получить консультацию
+
+
+            <div class="article__inner-btn">
+              <a class="global__btn-contact global-btn main-btn" href="news.html">
+                все новости
+              </a>
+              <div data-modal class="global__btn-contact global-btn main-btn article__btn">
+                Получить консультацию
+              </div>
             </div>
           </div>
-        </div>
-  
 
- </div>
+
+        </div>
       </section>
 
 
@@ -535,8 +535,8 @@
             <p class="footer__requisites">
               Реквизиты
               <br>
-              ООО “Линия воды”
               <br>
+              ООО “Линия воды”
               <br>
               ИНН: 3810326662
               <br>
@@ -545,6 +545,17 @@
               БИК: 044525974
               <br>
               р/c: 40702810210000717176
+              <br>
+              <br>
+              ИП Минеев В.Л.
+              <br>
+              ИНН: 380895552291
+              <br>
+              ОГРНИП: 306380828200028
+              <br>
+              БИК: 044525974
+              <br>
+              р/c: 40802810300001668539
             </p>
             <p class="footer__city">
               192241, г. Санкт-Петербург,
