--- a/app/index.html
+++ b/app/index.html
@@ -1181,11 +1181,11 @@
               р/c: 40702810210000717176
               <br>
               <br>
-              ИП Минеев
+              ИП Минеев В.Л.
               <br>
               ИНН: 380895552291
               <br>
-              ОГРН: 306380828200028
+              ОГРНИП: 306380828200028
               <br>
               БИК: 044525974
               <br>
