--- a/app/jobs02.html
+++ b/app/jobs02.html
@@ -498,20 +498,31 @@
           <div class="footer__item footer__item-requisites">
 
 
-            <p class="footer__requisites">
-              Реквизиты
-              <br>
-              ООО “Линия воды”
-              <br>
-              <br>
-              ИНН: 3810326662
-              <br>
-              ОГРН: 1123850035650
-              <br>
-              БИК: 044525974
-              <br>
-              р/c: 40702810210000717176
-            </p>
+             <p class="footer__requisites">
+               Реквизиты
+               <br>
+               <br>
+               ООО “Линия воды”
+               <br>
+               ИНН: 3810326662
+               <br>
+               ОГРН: 1123850035650
+               <br>
+               БИК: 044525974
+               <br>
+               р/c: 40702810210000717176
+               <br>
+               <br>
+               ИП Минеев В.Л.
+               <br>
+               ИНН: 380895552291
+               <br>
+               ОГРНИП: 306380828200028
+               <br>
+               БИК: 044525974
+               <br>
+               р/c: 40802810300001668539
+             </p>
             <p class="footer__city">
               192241, г. Санкт-Петербург,
               <br>
