two fix requisites footer fuul str

--- a/app/children.html
+++ b/app/children.html
@@ -1023,7 +1023,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
