--- a/app/construction.html
+++ b/app/construction.html
@@ -1160,7 +1160,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
