--- a/app/gallery.html
+++ b/app/gallery.html
@@ -702,7 +702,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
