--- a/app/product01.html
+++ b/app/product01.html
@@ -648,7 +648,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
