--- a/app/product09.html
+++ b/app/product09.html
@@ -641,7 +641,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
