--- a/app/404.html
+++ b/app/404.html
@@ -404,7 +404,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
