--- a/app/about.html
+++ b/app/about.html
@@ -584,7 +584,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
