--- a/app/design.html
+++ b/app/design.html
@@ -1091,7 +1091,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
