--- a/app/jobs.html
+++ b/app/jobs.html
@@ -554,7 +554,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
