--- a/app/jobs01.html
+++ b/app/jobs01.html
@@ -500,7 +500,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
