--- a/app/jobs03.html
+++ b/app/jobs03.html
@@ -509,7 +509,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
