--- a/app/mosaic.html
+++ b/app/mosaic.html
@@ -1108,7 +1108,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
