--- a/app/politics.html
+++ b/app/politics.html
@@ -536,7 +536,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
