--- a/app/product02.html
+++ b/app/product02.html
@@ -639,7 +639,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
