--- a/app/product03.html
+++ b/app/product03.html
@@ -645,7 +645,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
