--- a/app/product04.html
+++ b/app/product04.html
@@ -653,7 +653,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
