--- a/app/product07.html
+++ b/app/product07.html
@@ -638,7 +638,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
