--- a/app/product08.html
+++ b/app/product08.html
@@ -664,7 +664,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
