--- a/app/product10.html
+++ b/app/product10.html
@@ -636,7 +636,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
