--- a/app/pvc.html
+++ b/app/pvc.html
@@ -1089,7 +1089,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
