--- a/app/repair.html
+++ b/app/repair.html
@@ -1138,7 +1138,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
