--- a/app/reviews.html
+++ b/app/reviews.html
@@ -830,7 +830,7 @@
 
 
              <p class="footer__requisites">
-               Реквизиты
+               Реквизиты:
                <br>
                <br>
                ООО “Линия воды”
